--- a/templates/theme/init/def/__folderName__/style.css
+++ b/templates/theme/init/def/__folderName__/style.css
@@ -5,7 +5,6 @@ Theme Name: __projectName__
 /*
 Description: 
 Theme URI: 
-Text Domain: __textdomain__
 Version: 
 Tested: 
 Requires: 
@@ -16,6 +15,7 @@ Author URI:
 *optional*
 Update Server: 
 Required Plugins: 
+Branch: 
 
  - Please fill in additional Plugin information.
 // **EXTENDED_END** //
