--- a/res/less/tm-admin.less
+++ b/res/less/tm-admin.less
@@ -2,7 +2,6 @@
 @import "elements.less";
 // End: themaster //
 
-
 .tm-setting-row {
 	background-color: #fafafa !important;
 	background-image: url('../img/str.png');
@@ -21,6 +20,9 @@
 			height: 0;
 		}
 	}
+
+}
+.tm-settings {
 	.tm-settingswrap {
 		margin: 10px 0;
 	}
@@ -72,6 +74,9 @@
 		border: 0;
 		border-top: 1px solid #dfdfdf;
 		margin-right: 2.2em;
+		&.last {
+			margin-top: 5em;
+		}
 	}
 }
 .wrap {
