--- a/res/less/tm-admin.less
+++ b/res/less/tm-admin.less
@@ -127,6 +127,10 @@
 }
 .wrap {
 	.updated {
+		input {
+			position: relative;
+			top: -3px;
+		}
 		&.success {
 			border-color: #009338;
 			background-color: #B8EDCC;
