--- a/res/less/tm-admin.less
+++ b/res/less/tm-admin.less
@@ -2,6 +2,9 @@
 @import "elements.less";
 // End: themaster //
 
+.nowrap {
+  white-space:nowrap;
+}
 .tm-setting-row {
 	background-color: #fafafa !important;
 	background-image: url('../img/str.png');
