--- a/res/less/base.less
+++ b/res/less/base.less
@@ -2,6 +2,7 @@
 @import "elements.less";
 // End: themaster //
 
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -47,6 +48,9 @@ br.clear {
   padding: 0;
   border: 0;
   font-size: 0;
+}
+.nowrap {
+  white-space:nowrap;
 }
 a:hover, a:focus, a:active {
   text-decoration: none;
