--- a/res/less/tm-admin.less
+++ b/res/less/tm-admin.less
@@ -21,6 +21,7 @@
 		.tm-settingswrap {
 			margin: 0;
 			height: 0;
+			overflow: hidden;
 		}
 	}
 
@@ -30,7 +31,6 @@
 		margin: 10px 0;
 	}
 	.tm-settingwrap {
-		height: 26px;
 		line-height: 26px;
 		&.tm-savewrap {
 			margin-top: 15px;
@@ -121,11 +121,6 @@
 			}
 
 		}
-	}
-}
-#wpcontent .tm-settings {
-	.tm-settingwrap {
-		height: auto;
 	}
 }
 .wrap {
