Added .alignleft and .alignright to base.less

--- a/res/less/base.less
+++ b/res/less/base.less
@@ -55,6 +55,12 @@ br.clear {
 .nowrap {
   white-space:nowrap;
 }
+.alignleft {
+  float: left;
+}
+.alignright {
+  float: right;
+}
 a:hover, a:focus, a:active {
   text-decoration: none;
 }
