ready for master

--- a/res/less/tm-admin.less
+++ b/res/less/tm-admin.less
@@ -123,6 +123,13 @@
 		}
 	}
 }
+.tm-fileselect_preview {
+	&.tm-fileselect_loading {
+		min-height: 30px;
+		background: transparent url('../img/loading_l.gif') center center no-repeat;
+	}
+}
+
 .wrap {
 	.updated {
 		input {
