--- a/res/less/tm-admin.less
+++ b/res/less/tm-admin.less
@@ -1,6 +1,5 @@
-// themaster //
-@import "elements.less";
-// End: themaster //
+// globals: @baseUrl, @home, @masterRes, @uploadUrl, @wpurl
+// Have fun, writing LESS!
 
 .nowrap {
   white-space:nowrap;
