--- a/res/less/base.less
+++ b/res/less/base.less
@@ -1,7 +1,5 @@
-// themaster //
-@import "elements.less";
-// End: themaster //
-
+// globals: @baseUrl, @home, @masterRes, @uploadUrl, @wpurl
+// Have fun, writing LESS!
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
