--- a/templates/plugin/full/def/__folderName__/-e- res/less/style.less
+++ b/templates/plugin/full/def/__folderName__/-e- res/less/style.less
@@ -1,6 +1,4 @@
-// themaster //
-@import "elements.less";
-// End: themaster //
-
+// globals: @baseUrl, @home, @masterRes, @uploadUrl, @wpurl
+// Have fun, writing LESS!
 
 // Your stuff here.
