add new globals

--- a/res/less/base.less
+++ b/res/less/base.less
@@ -1,4 +1,4 @@
-// globals: @baseUrl, @home, @masterRes, @uploadUrl, @wpurl
+// globals: @baseUrl, @home, @img, @masterRes, @masterTmp, @res, @tmp, @uploadUrl, @wpurl
 // Have fun, writing LESS!
 
 html, body, div, span, applet, object, iframe,
