--- a/res/less/tm-admin.less
+++ b/res/less/tm-admin.less
@@ -1,4 +1,4 @@
-// globals: @baseUrl, @home, @masterRes, @uploadUrl, @wpurl
+// globals: @baseUrl, @home, @img, @masterRes, @masterTmp, @res, @tmp, @uploadUrl, @wpurl
 // Have fun, writing LESS!
 
 .nowrap {
@@ -6,7 +6,7 @@
 }
 .tm-setting-row {
 	background-color: #fafafa !important;
-	background-image: url('../img/str.png');
+	background-image: url("@{masterRes}img/str.png");
 	background-repeat: repeat;
 	box-shadow: 0 0 6px rgba(0, 0, 0, 0.1) inset;
 	td {
